# pipes-rs

./: .gitignore  Cargo.toml  install_corelib.sh  justfile  local_build_and_run.sh  pipes_root.toml  readme.md  recompile_web.sh
.github/workflows/: release.yml
export_html/: index.html
interpreter/: Cargo.toml
interpreter/src/: backend.rs  common.rs  frontend.rs  lib.rs  main.rs  middleend.rs
interpreter/src/backend/: debugger.rs  evaluate.rs
interpreter/src/frontend/: expression.rs  parser.rs  program.rs  sources.rs  tests.rs
interpreter/src/frontend/expression/: display.rs
interpreter/src/frontend/parser/: import.rs  macros.rs  nodes_to_expression.rs  recursive_reader.rs  reverse_iterative_parser.rs  reverse_iterative_reader.rs  root.rs
interpreter/src/frontend/sources/: lexer.rs  location.rs  token.rs
interpreter/src/middleend/: comptime.rs  intrinsics.rs  typing.rs
interpreter/src/middleend/typing/: cast.rs  unify.rs
language_server/: Cargo.toml
language_server/src/: analyzer.rs  main.rs  message_buffer.rs  request.rs  response.rs
pipes_programs/corelib/: array.pipes  array_i64.pipes  assert.pipes  core.pipes  i64.pipes  str.pipes  test.pipes
pipes_programs/demos/: comptime.pipes  corelib.pipes  debugger.pipes  eval.pipes  hello_world.pipes  macros2.pipes  recursive.pipes  reusable_functions.pipes  reusing_functions.pipes  structs.pipes  sum_stdin.pipes  type_inference.pipes
pipes_programs/demos/some_namespace/: reusable_functions.pipes
pipes_programs/tests/: reusing_struct_cast.pipes  reusing_struct_type.pipes  undefined_struct.pipes  unqualified_struct.pipes
pisp/: Cargo.toml
pisp/src/: backend.rs  expression.rs  frontend.rs  main.rs
src/: backend.rs  common.rs  evaluate.rs  frontend.rs  lexer.rs  lib.rs  main.rs  middleend.rs  parser.rs  typing.rs
src/backend/: debugger.rs  evaluate.rs
src/frontend/: ast.rs  benchmarks.rs  expression.rs  fast_iterative_parser.rs  iterative_parser.rs  lexer.rs  location.rs  parser.rs  program.rs  recursive_parser.rs  reverse_iterative_parser.rs  slow_iterative_parser.rs  sources.rs  tests.rs  token.rs
src/frontend/expression/: display.rs
src/frontend/parser/: fast_iterative_parser.rs  import.rs  multiparameter.rs  recursive_parser.rs  reverse_iterative_parser.rs  root.rs  slow_iterative_parser.rs
src/frontend/sources/: lexer.rs  location.rs  token.rs
src/middleend/: comptime.rs  intrinsics.rs  typing.rs
src/middleend/typing/: cast.rs  expand.rs  unify.rs
src/typing/: unify.rs
web/: index.html  recompile.sh  run_local.sh
web_playground/: Cargo.toml
web_playground/src/: main.rs
