[package]
name = "pipes-rs"
version = "0.1.0"
edition = "2021"
default-run = "pipes-rs"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
#debug = 0
#strip = "debuginfo"

[dependencies]
clap = {version = "=4.4.7", features = ["derive"]}
wasm-bindgen = "=0.2.89"
strum = "=0.26.1"
strum_macros = "=0.26.1"
libc = "=0.2.152"
