[package]
name = "pipes-rs"
version = "0.1.0"
edition = "2021"
default-run = "pipes-rs"

[lib]
crate-type = ["rlib", "cdylib"]  # TODO: why this?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "=4.4.7", features = ["derive"]} # for CLI parsing
wasm-bindgen = "=0.2.89" # for targeting WebAssembly
strum = "=0.26.1" # QoL iterating enums
strum_macros = "=0.26.1" # QoL iterating enums
libc = "=0.2.152" # for preventing error messages when piping output (in bash)
