[package]
name = "pipes-rs"
version = "0.1.0"
edition = "2021"
default-run = "pipes-rs"

[lib]
crate-type = ["rlib", "cdylib"]  # TODO: why this?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "=4.4.7", features = ["derive"]} # for CLI parsing
wasm-bindgen = { version = "=0.2.89", features = ["std"], default-features = false } # for targeting WebAssembly
strum = { version = "=0.26.1", default-features = false } # QoL iterating enums
strum_macros = "=0.26.1" # QoL iterating enums
libc = { version = "=0.2.177", default-features = false } # for preventing error messages when piping output (in bash)
